# tauri-dialog-rs

./: Cargo.toml  DEPENDENTS.md  README.md
.github/: dependabot.yml
.github/workflows/: Rust.yml
Source/: lib.rs
examples/: basic.rs
tauri-dialog-sys/: Cargo.toml  README.md  build.rs
tauri-dialog-sys/Source/: lib.rs
