[badges]
maintenance = { status = "deprecated" }

[dependencies]
tauri-dialog-sys = { path = "./tauri-dialog-sys", version = "0.1" }

[lib]
path = "Source/lib.rs"

[package]
authors = ["Lucas Nogueira <lucas@tauri.studio>"]
description = "This crate is no longer maintained."
edition = "2018"
license-file = "LICENSE"
name = "tauri-dialog"
repository = "https://github.com/tauri-apps/tauri-dialog-rs"
version = "0.1.1"
