[badges]
maintenance = { status = "deprecated" }

[build-dependencies]
cc = "1"
pkg-config = "0.3"

[lib]
path = "Source/lib.rs"

[package]
authors = ["Lucas Nogueira <lucas@tauri.studio>"]
description = "This crate is no longer maintained."
edition = "2018"
license-file = "LICENSE"
name = "tauri-dialog-sys"
repository = "https://github.com/tauri-apps/tauri-dialog-rs"
version = "0.1.1"
